--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -60,35 +60,37 @@
                 </div>
                 </div>
               </div>
-              <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/cloud01.jpg" alt="cloud image">
+               <div class="item">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/ImgScreen1.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                 </div>
-                </div> 
+                </div>
+                <h2><p align="center"><font color="990066">Manage Your Diversified Data in One Single View!!!</font></p><h2>
                 </div>
                 <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/cloud1.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/ImgScreen2.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                 </div>
-                </div> 
                 </div>
-				<div class="item">
+                <h3><p align="center"><font color="000096">Utilize Your Free Space Effectively By Splitting and Sharing Data Between Drives</font></p><h3>
+                </div>
+                <div class="item">
                 <div class="wrapper"><img width = "1200px" height="400px" src="/static/cloudimage4.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
-				<h3>Simple Secure Unified Sharing and Storing System</h3>
+                    <h3>Simple Secure Unified Sharing and Storing System</h3>
                 </div>
-                </div> 
                 </div>
-				<div class="item">
+                </div>
+                <div class="item">
                 <div class="wrapper"><img width = "1200px" height="400px" src="/static/UnifiedCloudStorage.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                 </div>
-                </div> 
-                </div>                
+                </div>
+                </div>
             </div>
 
             <!-- Controls -->
