--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -9,6 +9,21 @@
           padding-bottom: 20px;
         }
 		h3 {color: #000000}
+		
+		#panel
+        {
+            position: absolute;
+            background: url(../static/socialmedia-bg.gif) no-repeat left
+top;
+            width: 50px;
+            height: 100px;
+            padding: 25px 3px 0px 6px;
+            margin: 0px 0px 0px 0px;
+            z-index: 900;
+            overflow: hidden;
+            font: 12px Arial,Helvetica,sans-serif;
+        }
+
     </style>
   </head>
   <body>
@@ -66,7 +81,7 @@
                   <!--Add text here -->
                 </div>
                 </div>
-                <h2><p align="center"><font color="990066">Manage Your Diversified Data in One Single View!!!</font></p><h2>
+                <h3><p align="center"><font color="990066">Manage Your Diversified Data in One Single View!!!</font></p><h3>
                 </div>
                 <div class="item">
                 <div class="wrapper"><img width = "1200px" height="400px" src="/static/ImgScreen2.jpg" alt="cloud image">
@@ -80,17 +95,20 @@
                 <div class="wrapper"><img width = "1200px" height="400px" src="/static/cloudimage4.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
-                    <h3>Simple Secure Unified Sharing and Storing System</h3>
+                    
                 </div>
+				<h3 align="center"><font color="960000">Simple Secure Unified Sharing and Storing System</font></h3>
                 </div>
                 </div>
                 <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/UnifiedCloudStorage.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/l1.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
+				  
                 </div>
+				<h3 align="center"><font color="000000">Unified Cloud Storage System</font></h3>
                 </div>
-                </div>
+                </div>				
             </div>
 
             <!-- Controls -->
@@ -104,14 +122,16 @@
         </p>
       </div>
     </div>
-	<div id="socialpanel" style="position: fixed; top: 200px; right: 0px;">
-        <a target="_blank" href="https://www.facebook.com/kapiltanejaphotography">
+	<div id="panel" style="position: fixed; top: 200px; right: 0px;">
+        <a target="_blank" href="https://www.facebook.com/UnifiedSyncdrive">
             <img width="34" height="33" border="0" alt="blogger"
-src="../static/fb.jpg"></a>        
-    </div>
+src="../static/fb.jpg"></a>            	
+        <a target="_blank" href="https://plus.google.com/101279383738758359662/about">
+            <img width="34" height="33" border="0" alt="blogger"
+src="../static/googlePlus.jpg"></a>            
     <div class="container">
       <div class="row">
-      </div>
+      </div>	  
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
