--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,13 +10,13 @@
         }
 		h3 {color: #000000}
 		
-		#panel
+		  #panel
         {
             position: absolute;
             background: url(../static/socialmedia-bg.gif) no-repeat left
 top;
-            width: 50px;
-            height: 100px;
+            width: 34px;
+            height: 300px;
             padding: 25px 3px 0px 6px;
             margin: 0px 0px 0px 0px;
             z-index: 900;
@@ -122,17 +122,21 @@ top;
         </p>
       </div>
     </div>
-	<div id="panel" style="position: fixed; top: 200px; right: 0px;">
-        <a target="_blank" href="https://www.facebook.com/UnifiedSyncdrive">
-            <img width="34" height="33" border="0" alt="blogger"
-src="../static/fb.jpg"></a>            	
-        <a target="_blank" href="https://plus.google.com/101279383738758359662/about">
-            <img width="34" height="33" border="0" alt="blogger"
-src="../static/googlePlus.jpg"></a>            
+	<div id="panel" style="position: absolute; top: 300px; right: 0px;">
+    <a target="_blank" href="https://www.facebook.com/UnifiedSyncdrive">
+            <img width="34" height="33" border="0" alt="facebook"
+src="../static/fb.jpg"></a>
+    <a target="_blank" href="https://plus.google.com/101279383738758359662/about">
+            <img width="34" height="33" border="0" alt="googleplus"
+src="../static/googlePlus.jpg"></a>
+    </div>
+	
     <div class="container">
       <div class="row">
       </div>	  
     </div>
+	
+	
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
   </body>
