--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -76,7 +76,7 @@ top;
                 </div>
               </div>
                <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/ImgScreen1.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/p1.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                 </div>
@@ -84,7 +84,7 @@ top;
                 <h3><p align="center"><font color="990066">Manage Your Diversified Data in One Single View!!!</font></p><h3>
                 </div>
                 <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/ImgScreen2.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/p2.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                 </div>
@@ -92,23 +92,32 @@ top;
                 <h3><p align="center"><font color="000096">Utilize Your Free Space Effectively By Splitting and Sharing Data Between Drives</font></p><h3>
                 </div>
                 <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/cloudimage4.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/p3.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
                     
                 </div>
-				<h3 align="center"><font color="960000">Simple Secure Unified Sharing and Storing System</font></h3>
+				<h3 align="center"><font color="960000">Simple Drag and Drop between drives to manage space</font></h3>
                 </div>
                 </div>
                 <div class="item">
-                <div class="wrapper"><img width = "1200px" height="400px" src="/static/l1.jpg" alt="cloud image">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/p4.jpg" alt="cloud image">
+                <div class="carousel-caption">
+                  <!--Add text here -->
+				  
+                </div>
+				<h3 align="center"><font color="008900">Handle all your data at one place by splitting and merging files with ease</font></h3>
+                </div>
+                </div>	
+ <div class="item">
+                <div class="wrapper"><img width = "1200px" height="400px" src="/static/p5.jpg" alt="cloud image">
                 <div class="carousel-caption">
                   <!--Add text here -->
 				  
                 </div>
 				<h3 align="center"><font color="000000">Unified Cloud Storage System</font></h3>
                 </div>
-                </div>				
+                </div>					
             </div>
 
             <!-- Controls -->
@@ -122,7 +131,7 @@ top;
         </p>
       </div>
     </div>
-	<div id="panel" style="position: absolute; top: 300px; right: 0px;">
+	<div id="panel" style="position: absolute; top: 600px; right: 0px;">
     <a target="_blank" href="https://www.facebook.com/UnifiedSyncdrive">
             <img width="34" height="33" border="0" alt="facebook"
 src="../static/fb.jpg"></a>
